backend/backend_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: datakirk-backend
  labels:
    app: datakirk
spec:
  replicas: 3
  selector:
    matchLabels:
      app: datakirk-backend
  template:
    metadata:
      labels:
        app: datakirk-backend
    spec:
      containers:
      - name: datakirkbackend
        image: vixion/datakirk_backend:v1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
          name: uwsgi
          protocol: TCP
